--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,11 +4,11 @@
     <base href="./" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CryptocurrencyServicesApiGateway</title>
+    <title>Cryptocurrency Services</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico?v=2" />
     <link rel="manifest" href="manifest.webapp" />
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
 </head>
